--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tpFullStack",
   "version": "1.0.0",
   "main": "app.js",
+  "engines":{
+    "node": "10.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
